--- a/client/src/styles/scss/components/_hero.scss
+++ b/client/src/styles/scss/components/_hero.scss
@@ -26,6 +26,7 @@
 @media (min-width: 800px) {
   .hero-container {
     position: relative;
+    height: 900px;
 
     .hero-banner-img {
       height: 900px;
